# cargo-release-action

./: Cargo.toml  README.md  action.yml
examples/: check-release.yml  release.yml
src/: lib.rs  main.rs  utils.rs
src/github/: github_format.rs  mod.rs
tests/: pull_request.rs  push.json  push.rs  test.json  test.rs
